<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.dnastack.dataconnect</groupId>
	<artifactId>data-connect-trino-e2e-tests</artifactId>
	<version>0.1-SNAPSHOT</version>
	<name>Data Connect End-to-end tests</name>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven-go-offline.plugin.version>1.2.8</maven-go-offline.plugin.version>
		<maven.surefire-plugin.version>3.5.4</maven.surefire-plugin.version>
		<surefire-junit-platform.version>3.5.4</surefire-junit-platform.version>
		<junit-platform-launcher.version>1.13.4</junit-platform-launcher.version>
		<reportsDirectory/>
		<actuator-e2e-test.version>1.0.5</actuator-e2e-test.version>
		<jupiter.version>5.13.4</jupiter.version>
		<jackson.version>2.20.0</jackson.version>
		<slf4j.version>1.7.36</slf4j.version>
		<logback-extensions.version>1.0.1</logback-extensions.version>
		<logback.contrib.version>0.1.5</logback.contrib.version>
		<logback.version>1.5.25</logback.version>
		<dd-javac-plugin.version>0.2.4</dd-javac-plugin.version>
		<rest-assured.version>5.5.6</rest-assured.version>
		<lombok.version>1.18.42</lombok.version>
		<awaitility.version>4.3.0</awaitility.version>
		<assertj.version>3.27.7</assertj.version>
		<guava.version>33.5.0-jre</guava.version>
		<google-oauth-lib.version>1.39.1</google-oauth-lib.version>
		<commons-validator.version>1.11.0</commons-validator.version>
	</properties>

	<repositories>
		<repository>
			<id>github</id>
			<name>DNAstack Public Github Packages</name>
			<url>https://maven.pkg.github.com/DNAstack/dnastack-packages</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${jupiter.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<version>${logback.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
            <version>1.0.0</version>
        </dependency>
		<dependency>
			<groupId>com.dnastack</groupId>
			<artifactId>actuator-e2e-test</artifactId>
			<version>${actuator-e2e-test.version}</version>
		</dependency>
		<dependency>
			<groupId>io.trino</groupId>
			<artifactId>trino-jdbc</artifactId>
			<version>359</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${jupiter.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>${rest-assured.version}</version>
			<exclusions>
				<exclusion>
					<!-- ensure jcl-over-slf4j handles commons logging API -->
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.auth</groupId>
			<artifactId>google-auth-library-oauth2-http</artifactId>
			<version>${google-oauth-lib.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>${commons-validator.version}</version>
		</dependency>
		<!-- assertj -->
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj.version}</version>
		</dependency>

		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<version>${awaitility.version}</version>
		</dependency>

		<!-- Parseable Stackdriver Logs -->
		<dependency>
			<groupId>com.dnastack</groupId>
			<artifactId>logback-extensions</artifactId>
			<version>${logback-extensions.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback.contrib</groupId>
			<artifactId>logback-jackson</artifactId>
			<version>${logback.contrib.version}</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire-plugin.version}</version>
				<!-- Tells surefire to run the BaseActuatorE2eTest imported -->
				<configuration>
					<reportsDirectory>${reportsDirectory}</reportsDirectory>
					<dependenciesToScan>
						<dependency>com.dnastack:actuator-e2e-test</dependency>
					</dependenciesToScan>
				</configuration>
			</plugin>
			<plugin>
				<groupId>de.qaware.maven</groupId>
				<artifactId>go-offline-maven-plugin</artifactId>
				<version>${maven-go-offline.plugin.version}</version>
				<configuration>
					<downloadSources>false</downloadSources>
					<downloadJavadoc>false</downloadJavadoc>
					<dynamicDependencies>
						<dynamicDependency>
							<groupId>org.apache.maven.surefire</groupId>
							<artifactId>surefire-junit-platform</artifactId>
							<version>${surefire-junit-platform.version}</version>
							<repositoryType>PLUGIN</repositoryType>
						</dynamicDependency>
						<dynamicDependency>
							<groupId>org.junit.platform</groupId>
							<artifactId>junit-platform-launcher</artifactId>
							<version>${junit-platform-launcher.version}</version>
							<repositoryType>MAIN</repositoryType>
						</dynamicDependency>
						<dynamicDependency>
							<groupId>org.codehaus.plexus</groupId>
							<artifactId>plexus-utils</artifactId>
							<version>1.1</version>
							<repositoryType>MAIN</repositoryType>
						</dynamicDependency>
					</dynamicDependencies>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
